; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_avmfritz.c_read_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/mISDN/extr_avmfritz.c_read_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fritzcard = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fritzcard*, i32)* @read_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_status(%struct.fritzcard* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fritzcard*, align 8
  %5 = alloca i32, align 4
  store %struct.fritzcard* %0, %struct.fritzcard** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.fritzcard*, %struct.fritzcard** %4, align 8
  %7 = getelementptr inbounds %struct.fritzcard, %struct.fritzcard* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %21 [
    i32 128, label %9
    i32 129, label %15
  ]

9:                                                ; preds = %2
  %10 = load %struct.fritzcard*, %struct.fritzcard** %4, align 8
  %11 = getelementptr inbounds %struct.fritzcard, %struct.fritzcard* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @__read_status_pciv2(i32 %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %22

15:                                               ; preds = %2
  %16 = load %struct.fritzcard*, %struct.fritzcard** %4, align 8
  %17 = getelementptr inbounds %struct.fritzcard, %struct.fritzcard* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @__read_status_pci(i32 %18, i32 %19)
  store i32 %20, i32* %3, align 4
  br label %22

21:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %15, %9
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @__read_status_pciv2(i32, i32) #1

declare dso_local i32 @__read_status_pci(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
